--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,111 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4"></div>
+          <div class="col-lg-4">
+            <div class="blog-card">
+              <div class="image-wrapper">
+                <img src="images/blog-card/image-1.jpg" alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <div class="title-wrapper py-25 px-35 pb-20">
+                  <h3 class="title">Retore Lighting Design in The Hotel</h3>
+                  <p class="desc">
+                    Proin efficitur, mauris vel condimentum pulvinar, velit orci
+                    consectetur ligula, eget egestas magna mi ut arcu. Phasellus
+                    nec odio orci.
+                  </p>
+                  <div class="read-more">
+                    <a href="#">Read More</a>
+                  </div>
+                  <div class="user-meta">
+                    <ul>
+                      <li>
+                        <i class="fa-solid fa-user"></i>
+                        <span>By</span>
+                        Admin
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        <span>October</span>
+                        19, 2024
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="blog-card">
+              <div class="image-wrapper">
+                <img src="images/blog-card/image-2.jpg" alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <div class="title-wrapper py-25 px-35 pb-20">
+                  <h3 class="title">Retore Lighting Design in The Hotel</h3>
+                  <p class="desc">
+                    Proin efficitur, mauris vel condimentum pulvinar, velit orci
+                    consectetur ligula, eget egestas magna mi ut arcu. Phasellus
+                    nec odio orci.
+                  </p>
+                  <div class="read-more">
+                    <a href="#">Read More</a>
+                  </div>
+                  <div class="user-meta">
+                    <ul>
+                      <li>
+                        <i class="fa-solid fa-user"></i>
+                        <span>By</span>
+                        Admin
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        <span>October</span>
+                        19, 2024
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="blog-card">
+              <div class="image-wrapper">
+                <img src="images/blog-card/image-3.jpg" alt="team member" />
+                <div class="overlay"></div>
+              </div>
+              <div class="content-wrapper">
+                <div class="title-wrapper py-25 px-35 pb-20">
+                  <h3 class="title">Retore Lighting Design in The Hotel</h3>
+                  <p class="desc">
+                    Proin efficitur, mauris vel condimentum pulvinar, velit orci
+                    consectetur ligula, eget egestas magna mi ut arcu. Phasellus
+                    nec odio orci.
+                  </p>
+                  <div class="read-more">
+                    <a href="#">Read More</a>
+                  </div>
+                  <div class="user-meta">
+                    <ul>
+                      <li>
+                        <i class="fa-solid fa-user"></i>
+                        <span>By</span>
+                        Admin
+                      </li>
+                      <li>
+                        <i class="fa-solid fa-calendar-days"></i>
+                        <span>October</span>
+                        19, 2024
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
