add: slider-one responsive

--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
         <div class="single-slider-wrapper">
           <div class="single-slider">
             <div class="container">
-              <div
-                class="row h-100 align-items-lg-center align-items-xxl-start">
+              <div class="row h-100 align-items-lg-center">
                 <div class="col-12 col-lg-7 col-xxl-6 order-2 order-md-1">
                   <div class="slider-content-wrapper">
                     <div class="slider-content">
@@ -403,6 +402,113 @@
       </div>
     </div>
     <!-- Slider Section End !-->
+    <!-- About Us Area Start !-->
+    <div class="about-us-area style-1 py-120">
+      <div class="container">
+        <div class="row gy-5">
+          <div class="col-lg-6">
+            <div class="about-image-card style-1">
+              <div class="image-wrapper">
+                <!-- images module -->
+                <div class="main-img">
+                  <div class="content">
+                    <p>Luxury Room</p>
+                  </div>
+                  <img src="images/image-card/img-1.jpg" alt="about card img" />
+                  <div class="shape">
+                    <img
+                      src="images/shape/image-card-shape.png"
+                      alt="image-card-shape" />
+                  </div>
+                  <div class="video-popup-btn">
+                    <a
+                      href="https://www.youtube.com/watch?v=SZEflIVnhH8"
+                      class="mfp-iframe video-play">
+                      <i class="fa-solid fa-play" aria-hidden="true"></i>
+                    </a>
+                  </div>
+                </div>
+                <div class="square-shape"></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="about-info-card style-2">
+              <div class="about-info-content">
+                <!-- heading -->
+                <div class="section-title mb-0">
+                  <div class="sec-content">
+                    <h5 class="short-title">The Cappa Luxury Hotel</h5>
+                    <h2 class="title">
+                      Stay with Comfort
+                      <br />
+                      and Style
+                    </h2>
+
+                    <p class="sec-desc">
+                      Provide additional resources such as readings, articles,
+                      videos, or online tutorials for learners who want to
+                      explore the details further.Sit amet, consectetur
+                      adipiscing elit, sed do eiusmod. Sit amet, consectetur
+                      adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Sit amet.
+                    </p>
+                    <h4 class="para">
+                      Sit amet, consectetur adipiscing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua. Ut
+                      enim ad minim veniam, quis nostrud.
+                    </h4>
+                  </div>
+                </div>
+
+                <div class="icon-card-wrapper">
+                  <div class="icon-card style-1">
+                    <div class="image">
+                      <img src="images/icon/covered-dish.png" alt="" />
+                    </div>
+
+                    <div class="content">
+                      <h3 class="info-title">
+                        The Best
+                        <br />
+                        Restaurants
+                      </h3>
+                    </div>
+                  </div>
+                  <div class="icon-card style-1">
+                    <div class="image">
+                      <img src="images/icon/juice-cup.png" alt="" />
+                    </div>
+                    <div class="content">
+                      <h3 class="info-title">
+                        The Best
+                        <br />
+                        Coctail bar
+                      </h3>
+                    </div>
+                  </div>
+                </div>
+                <div class="btn-wrapper">
+                  <div class="inner-wrapper">
+                    <a href="#" class="theme-btn style-2">Know about us</a>
+                    <div class="booking-btn">
+                      <div class="image">
+                        <img src="images/icon/clock.png" />
+                      </div>
+                      <div class="content">
+                        <p>Booking Now</p>
+                        <a href="#">123456789</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- About Us Area End !-->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
