--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     <div class="about-us-area style-1 py-120">
       <div class="container">
         <div class="row gy-5">
-          <div class="col-lg-6">
+          <div class="col-xl-6 col-lg-12">
             <div class="about-image-card style-1">
               <div class="image-wrapper">
                 <!-- images module -->
@@ -432,7 +432,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-xl-6 col-lg-12">
             <div class="about-info-card style-2">
               <div class="about-info-content">
                 <!-- heading -->
@@ -509,6 +509,7 @@
       </div>
     </div>
     <!-- About Us Area End !-->
+
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
