add: slider style-2

--- a/index-2.html
+++ b/index-2.html
@@ -77,105 +77,139 @@
     </div>
     <!-- Preloader End !-->
     <!-- Header Start !-->
-    <header class="header-area style-4">
+    <header class="header-area style-2">
       <div class="header-menu-area sticky-header">
-        <div class="container">
-          <div class="row">
-            <div
-              class="col-xl-3 col-lg-3 col-md-6 col-6 d-flex align-items-center">
+        <div class="header-top">
+          <div class="custom-container">
+            <div class="inner-wrapper">
+              <div class="address">
+                <p class="title">Visit Us Daily :</p>
+                <p class="desc">
+                  2972 Westheimer Rd. Santa Ana, Illinois 85486
+                </p>
+              </div>
               <div class="logo-wrapper">
                 <div class="logo">
                   <a href="index.html" class="standard-logo">
-                    <img src="images/logo/black-logo.png" alt="logo" />
+                    <img src="images/logo/white-logo.png" alt="logo" />
                   </a>
                   <a href="index.html" class="sticky-logo">
-                    <img src="images/logo/sticky-logo.png" alt="logo" />
+                    <img src="images/logo/white-logo.png" alt="logo" />
                   </a>
                   <a href="index.html" class="retina-logo">
-                    <img src="images/logo/logo.png" alt="logo" />
+                    <img src="images/logo/white-logo.png" alt="logo" />
                   </a>
+                </div>
+              </div>
+              <div class="booking-btn">
+                <div class="image">
+                  <img src="images/icon/chat.svg" alt="chat" />
+                </div>
+                <div class="content">
+                  <p>Chat Us Anytime</p>
+                  <a href="#">(406) 555-0120</a>
                 </div>
               </div>
             </div>
-            <div
-              class="col-xl-9 col-lg-9 col-md-6 col-6 d-flex align-items-center justify-content-end">
-              <div class="menu d-inline-block">
-                <nav id="main-menu" class="main-menu">
-                  <ul>
-                    <li class="dropdown active">
-                      <a href="index.html">Home</a>
-                      <ul>
-                        <li><a href="index.html">Home Page 1</a></li>
-                        <li><a href="index-2.html">Home Page 2</a></li>
-                        <!-- <li><a href="index-3.html">Home Page 3</a></li>
-                                            <li><a href="index-4.html">Home Page 4</a></li>
-                                            <li><a href="index-5.html">Home Page 5</a></li>
-                                            <li><a href="index-6.html">Home Page 6</a></li> -->
-                      </ul>
-                    </li>
-                    <li><a href="about.html">About</a></li>
-                    <li class="dropdown">
-                      <a href="service.html">Service</a>
-                      <ul class="submenu">
-                        <li><a href="service.html">Service Page</a></li>
-                        <li>
-                          <a href="service-details.html">
-                            Service Details Page
-                          </a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="project.html">Pages</a>
-                      <ul class="submenu">
-                        <li><a href="faq.html">FAQ Page</a></li>
-                        <li><a href="pricing.html">Pricing Page</a></li>
-                        <li><a href="apartment.html">Apartment Page</a></li>
-                        <li><a href="project.html">Project Page</a></li>
-                        <li>
-                          <a href="project-details.html">
-                            Project Details Page
-                          </a>
-                        </li>
-                        <li><a href="team-member.html">Team Page</a></li>
-                        <li>
-                          <a href="team-details.html">Team Details Page</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="blog.html">Blog</a>
-                      <ul class="submenu">
-                        <li><a href="blog.html">Blog Page</a></li>
-                        <li>
-                          <a href="blog-details.html">Blog Details Page</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
-                </nav>
-              </div>
-              <div class="search-btn-with-btn">
-                <div class="search-btn-wrapper">
-                  <a href="#" class="search-btn">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+        </div>
+        <div class="custom-container">
+          <div class="row">
+            <div class="col-12">
+              <div class="header-menu-wrapper">
+                <div class="hamburger">
+                  <img src="images/icon/hamburger.svg" alt="hamburger" />
+                </div>
+                <div class="menu d-inline-block">
+                  <nav id="main-menu" class="main-menu">
+                    <ul>
+                      <li class="dropdown active">
+                        <a href="index.html">Home</a>
+                        <ul>
+                          <li><a href="index.html">Home Page 1</a></li>
+                          <li><a href="index-2.html">Home Page 2</a></li>
+                          <!-- <li><a href="index-3.html">Home Page 3</a></li>
+                        <li><a href="index-4.html">Home Page 4</a></li>
+                        <li><a href="index-5.html">Home Page 5</a></li>
+                        <li><a href="index-6.html">Home Page 6</a></li> -->
+                        </ul>
+                      </li>
+                      <li class="dropdown">
+                        <a href="about.html">Rooms & Suites</a>
+                        <ul class="submenu">
+                          <li><a href="service.html">Service Page</a></li>
+                          <li>
+                            <a href="service-details.html">
+                              Service Details Page
+                            </a>
+                          </li>
+                        </ul>
+                      </li>
+                      <!-- <li class="dropdown">
+                        <a href="service.html">Service</a>
+                        <ul class="submenu">
+                          <li><a href="service.html">Service Page</a></li>
+                          <li>
+                            <a href="service-details.html">Service Details Page</a>
+                          </li>
+                        </ul>
+                      </li> -->
+                      <li class="dropdown">
+                        <a href="project.html">Pages</a>
+                        <ul class="submenu">
+                          <li><a href="faq.html">FAQ Page</a></li>
+                          <li><a href="pricing.html">Pricing Page</a></li>
+                          <li><a href="apartment.html">Apartment Page</a></li>
+                          <li><a href="project.html">Project Page</a></li>
+                          <li>
+                            <a href="project-details.html">
+                              Project Details Page
+                            </a>
+                          </li>
+                          <li><a href="team-member.html">Team Page</a></li>
+                          <li>
+                            <a href="team-details.html">Team Details Page</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="dropdown">
+                        <a href="blog.html">News</a>
+                        <ul class="submenu">
+                          <li><a href="blog.html">Blog Page</a></li>
+                          <li>
+                            <a href="blog-details.html">Blog Details Page</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                  </nav>
+                </div>
+                <div class="search-btn-with-btn">
+                  <div class="btn-wrapper">
+                    <a href="#">Login</a>
+                    <span>/</span>
+                    <a href="#">Register</a>
+                  </div>
+                  <div class="select-container">
+                    <select id="room" name="room" required>
+                      <option value="" disabled selected>
+                        EN
+                        <i class="fa-solid fa-angle-down"></i>
+                      </option>
+                      <option value="101">BN</option>
+                      <option value="102">AR</option>
+                    </select>
+                  </div>
+                </div>
+                <!-- Mobile Menu Toggle Button Start !-->
+                <div class="mobile-menu-bar d-lg-none text-end">
+                  <a href="#" class="mobile-menu-toggle-btn">
+                    <i class="fal fa-bars"></i>
                   </a>
                 </div>
-                <div class="btn-wrapper">
-                  <a href="#" class="theme-btn">
-                    GET A QUOTE
-                    <i class="fa-solid fa-plus"></i>
-                  </a>
-                </div>
+                <!-- Mobile Menu Toggle Button End !-->
               </div>
-              <!-- Mobile Menu Toggle Button Start !-->
-              <div class="mobile-menu-bar d-lg-none text-end">
-                <a href="#" class="mobile-menu-toggle-btn">
-                  <i class="fal fa-bars"></i>
-                </a>
-              </div>
-              <!-- Mobile Menu Toggle Button End !-->
             </div>
           </div>
         </div>
@@ -231,72 +265,83 @@
     </div>
     <!-- Menu Sidebar Section Start -->
     <div class="body-overlay"></div>
-
     <!-- Slider Section Start !-->
-    <div class="slider-area style-4">
-      <div class="slider-wrapper">
-        <!-- single slider start -->
-        <div class="single-slider-wrapper">
-          <div
-            class="single-slider"
-            style="background-image: url(images/slider/slider-shape-2.png)">
-            <div class="container">
-              <div class="row align-items-center">
-                <div class="col-lg-6">
-                  <div class="section-title">
-                    <div class="sec-content">
-                      <div class="short-title-wrapper">
-                        <span class="short-title no-divider">Work process</span>
-                      </div>
-                      <h2 class="title">
-                        Designing Dreams,
-                        <br />
-                        Defining Spaces
-                      </h2>
-                    </div>
-                  </div>
+    <div
+      class="slider-area style-2 bg-gray-100"
+      style="background-image: url(images/hero-section/slider-2.jpg)">
+      <div class="shape-two">
+        <img src="images/shape/slider-2.1.png" alt="hotex" />
+      </div>
+      <div class="overlay"></div>
+      <div class="slider-outer-wrapper">
+        <div class="shape">
+          <img src="images/shape/slider-2.png" alt="hotex" />
+        </div>
+        <div class="slider-wrapper">
+          <!-- single slider start -->
+          <div class="single-slider-wrapper">
+            <div class="single-slider">
+              <div class="container">
+                <div class="image-wrapper">
+                  <img
+                    src="images/hero-section/v-2/image-1.jpg"
+                    alt="hero-image" />
                 </div>
-                <div class="col-lg-6">
-                  <div class="sec-desc">
-                    <p>
-                      It is a long established fact that a reader will be
-                      distracted by the readablejk content of a page when
-                      looking at its layout.
-                    </p>
+                <div class="slider-content-wrapper text-center">
+                  <div class="slider-content">
+                    <span class="slider-short-title">
+                      Embrace Life's Treasured Moments
+                    </span>
+                    <h1 class="slider-title">Suite Collection</h1>
                   </div>
-                  <div class="slider-btn-wrapper">
-                    <a href="about.html" class="simple-btn">
-                      Learn More
-                      <i class="fa-solid fa-plus"></i>
-                    </a>
-                    <a href="#" class="theme-btn">contact us</a>
-                  </div>
-                </div>
-              </div>
-              <div class="image-banner-wrapper">
-                <div class="image-banner">
-                  <img src="images/slider/banner/banner-4-1.jpg" alt="banner" />
-                  <div class="video-popup-btn">
-                    <div class="circle-rotate-wrapper">
-                      <div class="circle-rotate-inner">
-                        <div
-                          class="circle-rotate-text"
-                          data-circle-text='{"radius": 70, "forceWidth": true,"forceHeight": true}'>
-                          Best Working Since 1997
-                        </div>
-                      </div>
-                    </div>
-                    <a href="#" class="">A+</a>
-                  </div>
-                </div>
-                <div class="image-banner">
-                  <img src="images/slider/banner/banner-4-2.jpg" alt="banner" />
                 </div>
               </div>
             </div>
           </div>
+          <!-- single slider end -->
+          <!-- single slider start -->
+          <div class="single-slider-wrapper">
+            <div class="single-slider">
+              <div class="container">
+                <div class="image-wrapper">
+                  <img
+                    src="images/hero-section/v-2/image-1.jpg"
+                    alt="hero-image" />
+                </div>
+                <div class="slider-content-wrapper text-center">
+                  <div class="slider-content">
+                    <span class="slider-short-title">
+                      Embrace Life's Treasured Moments
+                    </span>
+                    <h1 class="slider-title">Suite Collection</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- single slider end -->
+          <!-- single slider start -->
+          <div class="single-slider-wrapper">
+            <div class="single-slider">
+              <div class="container">
+                <div class="image-wrapper">
+                  <img
+                    src="images/hero-section/v-2/image-1.jpg"
+                    alt="hero-image" />
+                </div>
+                <div class="slider-content-wrapper text-center">
+                  <div class="slider-content">
+                    <span class="slider-short-title">
+                      Embrace Life's Treasured Moments
+                    </span>
+                    <h1 class="slider-title">Suite Collection</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- single slider end -->
         </div>
-        <!-- single slider end -->
       </div>
     </div>
     <!-- Slider Section End !-->
