--- a/index-2.html
+++ b/index-2.html
@@ -346,33 +346,80 @@
     </div>
     <!-- Slider Section End !-->
 
-    <!-- Header Search Bar Modal Start -->
-    <div class="search-form-wrapper">
-      <div class="search-form-inner">
-        <div class="search-content-filed">
-          <form role="search" method="get" class="search-form" action="#">
-            <input type="hidden" name="post_type" value="post" />
-            <div class="search-form-input">
-              <div class="search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
+    <!-- Video area Start -->
+    <div class="video-popup-area style-1 py-140">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="video-popup-card">
+              <div class="video-popup-image">
+                <img src="images/common/video-card.jpg" alt="popup image" />
               </div>
-              <input type="search" placeholder="Search" />
-              <button
-                class="theme-btn"
-                type="submit"
-                title="Search"
-                aria-label="Search">
-                Search
-              </button>
+              <div class="video-popup-btn">
+                <a
+                  href="https://www.youtube.com/watch?v=SZEflIVnhH8"
+                  class="mfp-iframe video-play">
+                  <i class="fa-solid fa-play" aria-hidden="true"></i>
+                </a>
+              </div>
             </div>
-          </form>
-          <span class="search-close">
-            <i class="fa-light fa-xmark"></i>
-          </span>
+          </div>
+          <div class="col-lg-5">
+            <div class="section-title mb-0">
+              <div class="sec-content">
+                <h5 class="short-title">The Cappa Luxury Hotel</h5>
+                <h2 class="title">Enjoy a Luxury Experience</h2>
+
+                <p class="sec-desc">
+                  Provide additional resources such as readings, articles,
+                  videos, or online tutorials for learners who want to explore
+                  the details further.Sit amet, consectetur adipiscing elit, sed
+                  do eiusmod.
+                </p>
+                <h5 class="para">
+                  <span>Booking and Reservation?</span>
+                  Call us at +123 45679 00
+                </h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-lg-5">
+            <div class="gift-card mt-30">
+              <div class="shape">
+                <img
+                  src="images/shape/gift-card-1.png"
+                  alt="gift card"
+                  class="img-fluid" />
+              </div>
+              <div class="section-title mb-0">
+                <div class="sec-content">
+                  <h2 class="title text-white mb-0">Gift cards</h2>
+                  <p class="sec-desc text-white mt-6">
+                    Give the gift of Michelin-starred meals, spa visits and
+                    <br />
+                    more.
+                  </p>
+                  <div class="theme-btn-wrapper">
+                    <a href="#" class="theme-btn style-2 text-white mt-24">
+                      Know about us
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-5">
+            <div class="image-wrapper mt-n44">
+              <img src="images/common/video-card-2.jpg" alt="gift card" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- Header Search Bar Modal End -->
+    <!-- Video area End -->
     <!-- Scroll Up Section Start -->
     <div id="scrollTop" class="scrollup-wrapper">
       <div class="scrollup-btn">
