--- a/index-2.html
+++ b/index-2.html
@@ -385,8 +385,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-1"></div>
-          <div class="col-lg-5">
+          <div class="col-xxl-1"></div>
+          <div class="col-xl-5 col-lg-6">
             <div class="gift-card mt-30">
               <div class="shape">
                 <img
