--- a/index-2.html
+++ b/index-2.html
@@ -117,8 +117,21 @@
           <div class="row">
             <div class="col-12">
               <div class="header-menu-wrapper">
-                <div class="hamburger">
+                <div class="hamburger-left">
                   <img src="images/icon/hamburger.svg" alt="hamburger" />
+                </div>
+                <div class="logo-wrapper">
+                  <div class="logo">
+                    <a href="index.html" class="standard-logo">
+                      <img src="images/logo/white-logo.png" alt="logo" />
+                    </a>
+                    <a href="index.html" class="sticky-logo">
+                      <img src="images/logo/white-logo.png" alt="logo" />
+                    </a>
+                    <a href="index.html" class="retina-logo">
+                      <img src="images/logo/white-logo.png" alt="logo" />
+                    </a>
+                  </div>
                 </div>
                 <div class="menu d-inline-block">
                   <nav id="main-menu" class="main-menu">
