--- a/index-2.html
+++ b/index-2.html
@@ -433,13 +433,203 @@
       </div>
     </div>
     <!-- Video area End -->
-    <!-- Scroll Up Section Start -->
-    <div id="scrollTop" class="scrollup-wrapper">
-      <div class="scrollup-btn">
-        <i class="fa-regular fa-angle-up"></i>
+
+    <!-- Room and suites Start -->
+    <div class="room_and_suites style-2 pt-80 pb-156">
+      <div class="bg-image">
+        <img
+          src="images/section-bg/room_and_suits-1.jpg"
+          alt="room_and_suites" />
+      </div>
+      <div class="banner-text">
+        <p>
+          Luxury
+          <span>Rooms</span>
+        </p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-4 col-lg-8">
+            <div class="section-title mb-0">
+              <div class="sec-content">
+                <h5 class="short-title">Luxury Rooms</h5>
+                <h2 class="title">Luxury Rooms & Suites</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="room-card-slider-container">
+        <div class="room-card-wrapper-two">
+          <div
+            class="room-card style-2"
+            style="background-image: url(images/room-card/img-1.jpg)">
+            <div class="count">
+              <p>02</p>
+            </div>
+            <div class="booking-btn">
+              <a href="#">Book Now</a>
+            </div>
+            <div class="content-wrapper">
+              <div class="inner-wrapper">
+                <h3 class="title">Standard Room</h3>
+                <div class="price-wrapper">
+                  <span class="price">$150</span>
+                  <span class="divider"></span>
+                  <span class="day_night">Day</span>
+                </div>
+                <div class="rating">
+                  <div class="desc">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>2 King Bed</p>
+                  </div>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="room-card style-2"
+            style="background-image: url(images/room-card/img-2.jpg)">
+            <div class="count">
+              <p>03</p>
+            </div>
+            <div class="booking-btn">
+              <a href="#">Book Now</a>
+            </div>
+            <div class="content-wrapper">
+              <div class="inner-wrapper">
+                <h3 class="title">Standard Room</h3>
+                <div class="price-wrapper">
+                  <span class="price">$150</span>
+                  <span class="divider"></span>
+                  <span class="day_night">Day</span>
+                </div>
+                <div class="rating">
+                  <div class="desc">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>2 King Bed</p>
+                  </div>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="room-card style-2"
+            style="background-image: url(images/room-card/img-3.jpg)">
+            <div class="count">
+              <p>04</p>
+            </div>
+            <div class="booking-btn">
+              <a href="#">Book Now</a>
+            </div>
+            <div class="content-wrapper">
+              <div class="inner-wrapper">
+                <h3 class="title">Standard Room</h3>
+                <div class="price-wrapper">
+                  <span class="price">$150</span>
+                  <span class="divider"></span>
+                  <span class="day_night">Day</span>
+                </div>
+                <div class="rating">
+                  <div class="desc">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>2 King Bed</p>
+                  </div>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="room-card style-2"
+            style="background-image: url(images/room-card/img-4.jpg)">
+            <div class="count">
+              <p>05</p>
+            </div>
+            <div class="booking-btn">
+              <a href="#">Book Now</a>
+            </div>
+            <div class="content-wrapper">
+              <div class="inner-wrapper">
+                <h3 class="title">Standard Room</h3>
+                <div class="price-wrapper">
+                  <span class="price">$150</span>
+                  <span class="divider"></span>
+                  <span class="day_night">Day</span>
+                </div>
+                <div class="rating">
+                  <div class="desc">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>2 King Bed</p>
+                  </div>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="room-card style-2"
+            style="background-image: url(images/room-card/img-1.jpg)">
+            <div class="count">
+              <p>01</p>
+            </div>
+            <div class="booking-btn">
+              <a href="#">Book Now</a>
+            </div>
+            <div class="content-wrapper">
+              <div class="inner-wrapper">
+                <h3 class="title">Standard Room</h3>
+                <div class="price-wrapper">
+                  <span class="price">$150</span>
+                  <span class="divider"></span>
+                  <span class="day_night">Day</span>
+                </div>
+                <div class="rating">
+                  <div class="desc">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>2 King Bed</p>
+                  </div>
+                  <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <!-- Scroll Up Section End -->
+    <!-- Room and suites End -->
 
     <!-- Feature Area Start-->
     <div class="feature-area style-5 py-120 background-gray">
