add: service-area style-2 with responsive

--- a/index-2.html
+++ b/index-2.html
@@ -631,6 +631,103 @@
     </div>
     <!-- Room and suites End -->
 
+    <!-- Hotel Facilities Start -->
+    <div class="service-area style-2 py-100">
+      <div class="container">
+        <div class="section-title mb-0 style-2">
+          <div class="sec-content">
+            <h5 class="short-title">Hotex SERVICES</h5>
+            <h2 class="title">Hotel Facilities</h2>
+          </div>
+        </div>
+        <div class="card-wrapper">
+          <div class="row gy-4">
+            <!-- single service-card start -->
+            <div class="col-md-6 col-lg-4">
+              <div class="info-card style-2">
+                <div class="icon">
+                  <img src="images/icon/info-card/car.svg" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Parking Space</h3>
+                  <p>
+                    Sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididun.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- single service-card End -->
+            <!-- single service-card start -->
+            <div class="col-md-6 col-lg-4">
+              <div class="info-card style-2">
+                <div class="icon">
+                  <img
+                    src="images/icon/info-card/food-covered.svg"
+                    alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Parking Space</h3>
+                  <p>
+                    Sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididun.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- single service-card End -->
+            <!-- single service-card start -->
+            <div class="col-md-6 col-lg-4">
+              <div class="info-card style-2 image">
+                <img src="images/image-card/info-img-card.jpg" alt="" />
+              </div>
+            </div>
+            <!-- single service-card End -->
+            <!-- single service-card start -->
+            <div class="col-md-6 col-lg-4">
+              <div class="info-card style-2 image">
+                <img src="images/image-card/info-img-card-2.jpg" alt="" />
+              </div>
+            </div>
+            <!-- single service-card End -->
+            <!-- single service-card start -->
+            <div class="col-md-6 col-lg-4">
+              <div class="info-card style-2">
+                <div class="icon">
+                  <img src="images/icon/info-card/swim.svg" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Swimming Pool</h3>
+                  <p>
+                    Sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididun.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- single service-card End -->
+            <!-- single service-card start -->
+            <div class="col-md-6 col-lg-4">
+              <div class="info-card style-2">
+                <div class="icon">
+                  <img src="images/icon/info-card/bed.svg" alt="icon" />
+                </div>
+                <div class="content">
+                  <h3 class="title">Room Service</h3>
+                  <p>
+                    Sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididun.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- single service-card End -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Hotel Facilities End -->
+
     <!-- Feature Area Start-->
     <div class="feature-area style-5 py-120 background-gray">
       <div class="container">
