--- a/index-2.html
+++ b/index-2.html
@@ -728,6 +728,136 @@
     </div>
     <!-- Hotel Facilities End -->
 
+    <!--- Price Area Start !-->
+    <div
+      class="price-area style-1 background-gray py-100"
+      style="background-image: url(images/section-bg/price-area.jpg)">
+      <div class="container">
+        <div class="section-title style-2 mb-0">
+          <div class="row justify-content-between align-items-end mb-60">
+            <div class="col-xl-4 col-lg-6">
+              <div class="sec-content">
+                <h5 class="short-title">Luxury Rooms</h5>
+                <h2 class="title mb-0">Luxury Rooms & Suites</h2>
+              </div>
+            </div>
+            <div class="col-xl-4 col-lg-6">
+              <p class="sec-desc">
+                Proin efficitur, mauris vel condimentum pulvinar, velit orci
+                consectetur ligula, eget
+                <br />
+                egestas magna mi ut arcu. Phasellus nec odio orci. Nunc id massa
+                ante.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row gy-4">
+          <div class="col-md-6 col-lg-6">
+            <div class="price-card-wrapper">
+              <div class="image">
+                <img src="images/common/price-card-1.jpg" alt="" />
+              </div>
+              <div class="price-card">
+                <div class="price">
+                  <h1 class="price-heading">
+                    <span class="currency">$</span>
+                    19
+                    <span class="price-time">/night</span>
+                  </h1>
+                  <div class="card-title">
+                    <p class="title">Basic plan</p>
+                  </div>
+                </div>
+                <div class="list-wrapper">
+                  <div class="list">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Room Service
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Housekeeping
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Front Desk Services
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Gym/fitness center
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <a href="#" class="price-btn">Book Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-6">
+            <div class="price-card-wrapper">
+              <div class="image">
+                <img src="images/common/price-card-2.jpg" alt="" />
+              </div>
+              <div class="price-card">
+                <div class="price">
+                  <h1 class="price-heading">
+                    <span class="currency">$</span>
+                    19
+                    <span class="price-time">/night</span>
+                  </h1>
+                  <div class="card-title">
+                    <p class="title">Basic plan</p>
+                  </div>
+                </div>
+                <div class="list-wrapper">
+                  <div class="list">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Room Service
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Housekeeping
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Front Desk Services
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fa-solid fa-angles-right"></i>
+                          Gym/fitness center
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <a href="#" class="price-btn">Book Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--- Price Area End !-->
+
     <!-- Feature Area Start-->
     <div class="feature-area style-5 py-120 background-gray">
       <div class="container">
@@ -1860,129 +1990,6 @@
       </div>
     </div>
     <!-- Brand Slider Area End -->
-
-    <!--- Price Area Start !-->
-    <div class="price-area style-1 background-gray">
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-md-6 col-lg-4">
-            <div class="price-card">
-              <div class="card-title">
-                <p class="title">Basic plan</p>
-              </div>
-              <div class="price">
-                <h1 class="price-heading">
-                  <span class="currency">$</span>
-                  19
-                  <span class="price-time">/mo</span>
-                </h1>
-
-                <p class="price-desc">Lorem Ipsum is simply dummy.</p>
-              </div>
-              <div class="list-wrapper">
-                <div class="list">
-                  <ul>
-                    <li>
-                      Mistakes To Avoid
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                    <li>
-                      Your Startup
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                    <li>
-                      Knew About Fonts
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <a href="#" class="price-btn">
-                get now
-                <i class="fa-regular fa-circle-right"></i>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="price-card">
-              <div class="card-title">
-                <p class="title">Premium plan</p>
-              </div>
-              <div class="price">
-                <h1 class="price-heading">
-                  <span class="currency">$</span>
-                  30
-                  <span class="price-time">/mo</span>
-                </h1>
-
-                <p class="price-desc">Lorem Ipsum is simply dummy.</p>
-              </div>
-              <div class="list-wrapper">
-                <div class="list">
-                  <ul>
-                    <li>
-                      Mistakes To Avoid
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                    <li>
-                      Your Startup
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                    <li>
-                      Knew About Fonts
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <a href="#" class="price-btn">
-                get now
-                <i class="fa-regular fa-circle-right"></i>
-              </a>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="price-card">
-              <div class="card-title">
-                <p class="title">Elite plan</p>
-              </div>
-              <div class="price">
-                <h1 class="price-heading">
-                  <span class="currency">$</span>
-                  59
-                  <span class="price-time">/mo</span>
-                </h1>
-
-                <p class="price-desc">Lorem Ipsum is simply dummy.</p>
-              </div>
-              <div class="list-wrapper">
-                <div class="list">
-                  <ul>
-                    <li>
-                      Mistakes To Avoid
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                    <li>
-                      Your Startup
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                    <li>
-                      Knew About Fonts
-                      <i class="fa-solid fa-square-check"></i>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <a href="#" class="price-btn">
-                get now
-                <i class="fa-regular fa-circle-right"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--- Price Area End !-->
 
     <!-- Counter Up Area Start style-3 !-->
     <div
